# D7045E

./: .gitignore
projects/example/: CMakeLists.txt
projects/lab1/: CMakeLists.txt
projects/lab1/code/: exampleapp.cc
projects/lab2/: CMakeLists.txt  test.txt
projects/lab2/code/: binary_node.cpp  binary_node.h  convex_hull.cpp  convex_hull.h  lab2.cpp  lab2.h  leaf_node.cpp  leaf_node.h  main.cpp  node.cpp  node.h  ternary_node.cpp  ternary_node.h  triangle.h  triangulation.cpp  triangulation.h  types.h  util.cpp  util.h  validation.cpp  validation.h
projects/lab2/pointsets/: angled_line.txt  bug_case_10.txt  bug_case_1_convex_hull.txt  bug_case_2.txt  bug_case_3.txt  bug_case_4.txt  bug_case_5.txt  bug_case_6.txt  bug_case_7.txt  bug_case_8.txt  bug_case_9.txt  line_instersect_test.txt  line_instersect_test_2.txt  line_through_origin.txt  random.txt  square.txt  square_2.txt  square_outside_origin.txt  square_point_in_origin.txt  square_tree_insert_1.txt  test_1.txt  triangle.txt
projects/lab3/: CMakeLists.txt
projects/lab3-test/code/: graphics_node.cpp  lab3.cpp  mesh.cpp  monochrome_material.cpp  shader.cpp
projects/lab3-test/code/include/: cube.h  graphics_node.h  lab3.h  material.h  mesh.h  monochrome_material.h  shader.h  types.h
projects/lab3/code/: graphics_node.cpp  lab3.cpp  main.cpp  mesh.cpp  monochrome_material.cpp  shader.cpp  shader_program.cpp  simple_material.cpp
projects/lab3/code/include/: cube.h  graphics_node.h  lab3.h  material.h  mesh.h  shader.h  shader_program.h  simple_material.h  types.h
projects/lab4/: CMakeLists.txt
projects/lab4/code/: camera.cpp  graphics_node.cpp  lab3.cpp  lab4.cpp  main.cpp  mesh.cpp  monochrome_material.cpp  scene.cpp  shader.cpp  shader_program.cpp
projects/lab4/code/include/: camera.h  graphics_node.h  lab4.h  light_source.h  material.h  mesh.h  monochrome_material.h  node.h  scene.h  shader.h  types.h
